Create entity model with updated DB schema and relationships

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=${DB_PASSWORD}
 server.port=8080
 
 logging.level.root=INFO
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
