-store user tokens -handle logout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+application.security.jwt.secret-key=${SECRET_KEY}
+application.security.jwt.expiration=86400
+application.security.jwt.refresh-token.expiration=86400
