--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 application.security.jwt.secret-key=${SECRET_KEY}
-application.security.jwt.expiration=86400
-application.security.jwt.refresh-token.expiration=86400
+application.security.jwt.expiration=86400000
+application.security.jwt.refresh-token.expiration=604800000
